argocd/argocd-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  template:
    spec:
      hostAliases:
        - ip: "192.168.1.121"
          hostnames:
          - "keycloak.homelab.com"
