argocd/common-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: not-important
spec:
  revisionHistoryLimit: 0
  template:
    spec:
      hostAliases: #TODO Configure DNS instead
        - ip: "192.168.1.121"
          hostnames:
          - "keycloak.homelab.com"
          - "keycloak2.homelab.com"
          - "argocd.homelab.com"
