argocd/dex.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-dex-server
spec:
  revisionHistoryLimit: 0
  template:
    spec:
      hostAliases:
        - ip: "192.168.1.121"
          hostnames:
          - "keycloak.homelab.com"
